--- a/app/src/main/res/layout/fragment_gad7.xml
+++ b/app/src/main/res/layout/fragment_gad7.xml
@@ -1,60 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    android:background="#FAFAFA"
     android:id="@+id/fragmentGad">
     <!-- add this idd needed in test -->
 
-    <TextView
-        android:id="@+id/titleofscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:gravity="center"
-        android:padding="30dp"
-        android:text="@string/gad_7_scale"
-        android:textColor="@color/white"
-        android:textSize="25sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/head"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/upper_bar_sub"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_below="@+id/titleofscreen"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        android:background="@drawable/layout_rounded_bg"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleofscreen">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/titleofscreen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:padding="30dp"
-            android:text="@string/gad7_description"
-            android:textColor="@color/Grey"
-            android:textSize="15sp" />
+            android:text="@string/gad_7_scale"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="@string/gad7_description"
+            android:textColor="@color/lightGrey"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleofscreen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!--End main layout-->
+
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head">
 
         <LinearLayout
             android:id="@+id/mainLayoutQs"
@@ -142,8 +154,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton11"
@@ -193,9 +205,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton21"
@@ -244,9 +256,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton31"
@@ -295,9 +307,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton41"
@@ -347,9 +359,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton51"
@@ -399,9 +411,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton61"
@@ -451,8 +463,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp">
 
                     <RadioButton
                         android:id="@+id/radioButton71"
@@ -479,10 +491,8 @@
             </LinearLayout>
 
 
-        </LinearLayout> </ScrollView><!--End main layout-->
-
-
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/nav"
@@ -490,9 +500,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
 
@@ -501,6 +510,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/colorAccent"
             android:background="@android:color/transparent"
             android:text="@string/back" />
 
@@ -517,6 +527,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/colorAccent"
             android:background="@android:color/transparent"
             android:text="@string/next" />
 
