--- a/app/src/main/res/layout/fragment_sociodemo.xml
+++ b/app/src/main/res/layout/fragment_sociodemo.xml
@@ -1,64 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FAFAFA"
     android:id="@+id/socio">
     <!-- this id added cause it needed in test-->
 
-    <View
-        android:id="@+id/white_bg"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/head"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
-    <TextView
-        android:id="@+id/titleofscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/white_bg"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:fontFamily="@font/montserrat"
-        android:gravity="center"
-        android:text="@string/about_you"
-        android:textColor="@color/white"
-        android:textSize="25sp" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/upper_bar_sub"
+        android:elevation="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/white_bg"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/layout_rounded_bg"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titleofscreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="@string/about_you"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/description"
-            android:layout_width="360dp"
-            android:layout_height="85dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:padding="3dp"
-            android:layout_marginTop="30dp"
             android:text="@string/socio_description"
-            android:textColor="@color/Grey"
-            android:textSize="15sp" />
+            android:textColor="@color/lightGrey"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleofscreen"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head">
 
         <LinearLayout
             android:id="@+id/mainLayoutQs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="40dp"
             android:paddingEnd="10dp">
 
             <LinearLayout
@@ -77,10 +87,12 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/a1"
+                    android:id="@+id/age"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
+                    android:padding="5dp"
                     android:ems="10"
+                    android:background="@drawable/custom_edit_text"
                     android:inputType="number" />
 
 
@@ -102,19 +114,20 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/a2"
+                    android:id="@+id/height"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:ems="10"
-                    android:hint="@string/ex_160"
+                    android:layout_height="35dp"
+                    android:padding="5dp"
+                    android:background="@drawable/custom_edit_text"                    android:ems="10"
                     android:inputType="number" />
 
                 <TextView
                     android:id="@+id/e2"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
+                    android:layout_marginStart="5dp"
                     android:text="@string/cm"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />
@@ -137,20 +150,22 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/a3"
+                    android:id="@+id/weight"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
+                    android:padding="5dp"
+                    android:background="@drawable/custom_edit_text"
                     android:ems="10"
-                    android:hint="@string/ex_55"
                     android:inputType="number" />
 
                 <TextView
                     android:id="@+id/e3"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/kg"
+                    android:layout_marginStart="5dp"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />
 
@@ -172,18 +187,21 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/a4"
+                    android:id="@+id/income"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
+                    android:padding="5dp"
+                    android:background="@drawable/custom_edit_text"
                     android:ems="10"
                     android:inputType="number" />
 
                 <TextView
                     android:id="@+id/e4"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
+                    android:layout_marginStart="5dp"
                     android:text="@string/sr"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />
@@ -193,6 +211,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <TextView
@@ -207,15 +226,43 @@
 
 
                 <EditText
-                    android:id="@+id/a8"
+                    android:id="@+id/chronic"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                    android:padding="5dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/custom_edit_text"
                     android:ems="10"
                     android:hint="@string/ex_diabetes"
                     android:inputType="textPersonName" />
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q9"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/gender"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+
+                <Spinner
+                    android:id="@+id/gender"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10" />
+
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -234,7 +281,7 @@
 
 
                 <Spinner
-                    android:id="@+id/a5"
+                    android:id="@+id/married"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />
@@ -259,7 +306,7 @@
 
 
                 <Spinner
-                    android:id="@+id/a6"
+                    android:id="@+id/employee"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />
@@ -284,7 +331,7 @@
 
 
                 <Spinner
-                    android:id="@+id/a7"
+                    android:id="@+id/smoke"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />
@@ -295,17 +342,18 @@
 
         </LinearLayout>
 
-</ScrollView><!--end main layout-->
+    </ScrollView><!--end main layout-->
 
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <Button
@@ -330,6 +378,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/colorAccent"
             android:background="@android:color/transparent"
             android:text="@string/next" />
 
@@ -337,4 +386,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
