--- a/app/src/main/res/layout/my_doctor.xml
+++ b/app/src/main/res/layout/my_doctor.xml
@@ -93,16 +93,21 @@
 
     <ImageView
         android:id="@+id/check"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/correct"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/emailET"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/DateTV" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_checked"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/doc"
+        app:layout_constraintEnd_toEndOf="@+id/doc" />
+
+    <ImageView
+        android:id="@+id/check_false"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_cancel"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/doc"
+        app:layout_constraintEnd_toEndOf="@+id/doc" />
 
     <TextView
         android:id="@+id/DateTV"
@@ -136,49 +141,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DateTV" />
 
-  <!--  <TextView
-        android:id="@+id/DaeTV"
+
+    <TextView
+        android:id="@+id/info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/emailET"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Enable Automatic Report"
-        android:textSize="20sp"
+        android:text="Note:\nDeleting your doctor cause stop sending bi-weekly reports to the doctor's email. "
+        android:textColor="@color/gray_500"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailET" />
-
-
-    <Switch
-        android:id="@+id/switchReport"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/DaeTV"
-        app:layout_constraintTop_toBottomOf="@+id/emailET" /> -->
-
-
-   <!-- <Button
-        android:id="@+id/SaveChanges"
-        android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="70dp"
-        android:background="@drawable/main_button"
-        android:fontFamily="@font/montserrat"
-        android:padding="3dp"
-        android:text="Save Changes"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/delete" /> -->
 
     <Button
         android:id="@+id/delete"
@@ -198,314 +176,3 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <!--
-
-       <TextView
-        android:id="@+id/NameTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Doctor Name"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/NameTV"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:background="@drawable/custom_edit_text"
-        android:ems="10"
-        android:fontFamily="@font/montserrat"
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NameTV" />
-
-
-
-    <TextView
-        android:id="@+id/DateTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Doctor Email"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/DateTV"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:background="@drawable/custom_edit_text"
-        android:ems="10"
-        android:fontFamily="@font/montserrat"
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DateTV" />
-
-    <TextView
-        android:id="@+id/DaeTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Enable Automatic Report"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
-
-
-    <Switch
-        android:id="@+id/switchReport"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/DaeTV"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
-
-
-
-
-
-    <?xml version="1.0" encoding="utf-8"?>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".controller.main.profile.MyDoctor">
-
-        <View
-            android:id="@+id/white_bg1"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="575dp"
-            android:background="@drawable/white_bg" />
-
-
-        <TextView
-            android:id="@+id/titleofscreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="61dp"
-            android:layout_marginTop="60dp"
-            android:fontFamily="@font/montserrat"
-            android:text="My Doctor"
-            android:textColor="#000000"
-            android:textSize="30sp" />
-
-
-
-        <TextView
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="250dp"
-            android:fontFamily="@font/montserrat"
-            android:text="Edit Doctor"
-            android:textColor="#817889"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-10dp">
-
-            <TextView
-                android:id="@+id/fullName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="200dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Name"
-                android:textColor="#817889"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="240dp"
-                android:layout_marginLeft="-30dp"
-                android:ems="12"
-                android:hint="Name"
-                android:inputType="textPersonName"
-                android:textColor="#B1B0B0"
-                android:textSize="18sp"></TextView>
-            <EditText
-                android:id="@+id/nameET"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="240dp"
-                android:layout_marginLeft="-60dp"
-                android:ems="12"
-                android:hint="Name"
-                android:inputType="textPersonName"
-                android:textColor="#B1B0B0"></EditText>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-0dp">
-
-
-
-            <TextView
-                android:id="@+id/emailText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="288dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Email"
-                android:textColor="#817889"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="330dp"
-                android:layout_marginLeft="-30dp"
-                android:hint="Email"
-                android:inputType="textPersonName"
-                android:textColor="#B1B0B0"
-                android:ems="12"
-
-                android:textSize="18sp"></TextView>
-            <EditText
-                android:id="@+id/emailET"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="330dp"
-                android:layout_marginLeft="-60dp"
-                android:ems="12"
-                android:hint="Email"
-                android:inputType="textPersonName"
-                android:textColor="#B1B0B0"></EditText>
-            <ImageView
-                android:id="@+id/check"
-                android:layout_width="25dp"
-                android:layout_height="50dp"
-                android:src="@drawable/correct"
-                android:layout_marginTop="287dp"
-                android:layout_marginLeft="-320dp"
-                ></ImageView>
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-            <ToggleButton
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="420dp"
-                android:layout_marginLeft="260dp">
-
-            </ToggleButton>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="90dp"
-                android:text="Enable automatic report"
-                android:textColor="#817889"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginTop="420dp"
-                android:layout_marginLeft="-260dp">
-
-            </TextView>
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-            <Button
-                android:id="@+id/delete"
-                android:layout_width="98dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="151dp"
-                android:layout_marginBottom="50dp"
-                android:background="#E14E67"
-                android:ellipsize="none"
-                android:text="Delete Doctor"
-                android:textColor="#FFFFFF"
-                android:layout_marginTop="500dp"
-                android:layout_marginLeft="75dp"/>
-
-
-        </LinearLayout>
-        <Button
-            android:id="@+id/save"
-            android:layout_width="98dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="151dp"
-            android:layout_marginBottom="50dp"
-            android:background="#4CA1D3"
-            android:ellipsize="none"
-            android:text="Save"
-            android:textColor="#FFFFFF"
-            android:layout_marginTop="500dp"
-            android:layout_marginLeft="75dp"/>
-
-    </FrameLayout>-->
