--- a/app/src/main/res/layout/activity_patient_text_draft_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_text_draft_detail_page.xml
@@ -136,4 +136,29 @@
         app:layout_constraintEnd_toStartOf="@+id/SaveChanges"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/delete">
+
+        <TextView
+            android:id="@+id/LastUpdated"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Last Updated: "
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/DateCreated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date Created:  "
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
