--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
 
     <color name="dolphin">#669DB3FF</color>
     <color name="dolphinn">#71708D</color>
-
+    <color name="grey">#817889</color>
 
     <color name="lightAccent">#E1EFF7</color>
     <color name="colorAccent">#4BA0D1</color>
