--- a/app/src/main/res/layout/my_doctor.xml
+++ b/app/src/main/res/layout/my_doctor.xml
@@ -151,7 +151,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Note:\nDeleting your doctor cause stop sending bi-weekly reports to the doctor's email. "
+        android:text="@string/note_ndeleting_your_doctor_cause_stop_sending_bi_weekly_reports_to_the_doctor_s_email"
         android:textColor="@color/gray_500"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
