--- a/app/src/main/res/layout/patient_report.xml
+++ b/app/src/main/res/layout/patient_report.xml
@@ -175,44 +175,48 @@
                     app:layout_constraintTop_toBottomOf="@+id/text1" />
 
 
-                <ImageView
-                    android:id="@+id/AL_graph"
-                    android:layout_width="wrap_content"
-                    android:layout_height="240dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="24dp"
-                    android:paddingTop="10dp"
+<!--                <ImageView-->
+<!--                    android:id="@+id/AL_graph"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="240dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_marginStart="24dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:layout_marginEnd="24dp"-->
+<!--                    android:paddingTop="10dp"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toBottomOf="@+id/view" />-->
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="6dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view" />
+                    app:layout_constraintTop_toBottomOf="@+id/view">
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    app:cardCornerRadius="6dp"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content">-->
+                    <com.smarteist.autoimageslider.SliderView
+                        android:id="@+id/imageSlider"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        app:sliderAnimationDuration="600"
+                        app:sliderAutoCycleDirection="back_and_forth"
+                        app:sliderAutoCycleEnabled="true"
+                        app:sliderIndicatorAnimationDuration="600"
+                        app:sliderIndicatorGravity="center_horizontal|bottom"
+                        app:sliderIndicatorMargin="15dp"
+                        app:sliderIndicatorOrientation="horizontal"
+                        app:sliderIndicatorPadding="3dp"
+                        app:sliderIndicatorRadius="2dp"
+                        app:sliderIndicatorSelectedColor="#5A5A5A"
+                        app:sliderIndicatorUnselectedColor="#FFF"
+                        app:sliderScrollTimeInSec="1"
+                        app:sliderStartAutoCycle="true" />
 
-<!--                    <com.smarteist.autoimageslider.SliderView-->
-<!--                        android:id="@+id/imageSlider"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="300dp"-->
-<!--                        app:sliderAnimationDuration="600"-->
-<!--                        app:sliderAutoCycleDirection="back_and_forth"-->
-<!--                        app:sliderAutoCycleEnabled="true"-->
-<!--                        app:sliderIndicatorAnimationDuration="600"-->
-<!--                        app:sliderIndicatorGravity="center_horizontal|bottom"-->
-<!--                        app:sliderIndicatorMargin="15dp"-->
-<!--                        app:sliderIndicatorOrientation="horizontal"-->
-<!--                        app:sliderIndicatorPadding="3dp"-->
-<!--                        app:sliderIndicatorRadius="2dp"-->
-<!--                        app:sliderIndicatorSelectedColor="#5A5A5A"-->
-<!--                        app:sliderIndicatorUnselectedColor="#FFF"-->
-<!--                        app:sliderScrollTimeInSec="1"-->
-<!--                        app:sliderStartAutoCycle="true" />-->
-
-<!--                </androidx.cardview.widget.CardView>-->
+                </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
