--- a/app/src/main/res/layout/activity_patient_medicine_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_medicine_detail_page.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/montserrat"
-        android:text="Name"
+        android:text="@string/name"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head" />
@@ -102,7 +102,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Course Duration"
+        android:text="@string/course_duration"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Time (from first reminder)"
+        android:text="@string/time_from_first_reminder"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,7 +199,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Dose"
+        android:text="@string/dose"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -241,7 +241,7 @@
         android:background="@drawable/delete_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
-        android:text="Delete Medicine"
+        android:text="@string/delete_medicine"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
